test/spec/simd_splat.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/simd_splat.wast
(;; STDOUT ;;;
out/test/spec/simd_splat.wast:122: assert_malformed passed:
  out/test/spec/simd_splat/simd_splat.1.wat:1:22: error: unexpected token "v128.splat", expected an instr.
  (func (result v128) (v128.splat (i32.const 0)))
                       ^^^^^^^^^^
out/test/spec/simd_splat.wast:127: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.2.wasm:000001a: error: type mismatch in i8x16.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:128: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.3.wasm:000001a: error: type mismatch in i8x16.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:129: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.4.wasm:000001a: error: type mismatch in i8x16.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:130: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.5.wasm:000001a: error: type mismatch in i16x8.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:131: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.6.wasm:000001a: error: type mismatch in i16x8.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:132: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.7.wasm:000001a: error: type mismatch in i16x8.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:133: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.8.wasm:000001a: error: type mismatch in i32x4.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:134: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.9.wasm:000001a: error: type mismatch in i32x4.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:135: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.10.wasm:000001a: error: type mismatch in i32x4.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:136: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.11.wasm:000001a: error: type mismatch in f32x4.splat, expected [f32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:137: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.12.wasm:000001a: error: type mismatch in f32x4.splat, expected [f32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:138: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.13.wasm:000001a: error: type mismatch in f32x4.splat, expected [f32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:139: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.14.wasm:000001a: error: type mismatch in i64x2.splat, expected [i64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:140: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.15.wasm:000001a: error: type mismatch in i64x2.splat, expected [i64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:141: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.16.wasm:000001a: error: type mismatch in f64x2.splat, expected [f64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:142: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.17.wasm:000001a: error: type mismatch in f64x2.splat, expected [f64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:384: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.21.wasm:000001a: error: type mismatch in i8x16.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:392: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.22.wasm:000001a: error: type mismatch in i16x8.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:400: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.23.wasm:000001a: error: type mismatch in i32x4.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:408: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.24.wasm:000001a: error: type mismatch in f32x4.splat, expected [f32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:416: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.25.wasm:000001a: error: type mismatch in i64x2.splat, expected [i64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd_splat.wast:424: assert_invalid passed:
  out/test/spec/simd_splat/simd_splat.26.wasm:000001a: error: type mismatch in f64x2.splat, expected [f64] but got []
  000001a: error: OnUnaryExpr callback failed
181/181 tests passed.
;;; STDOUT ;;)
